# HostsEditor

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  build.bat  build.sh  create_app_icon.py  index.html  main.js  package-lock.json  package.json  vite.config.js
.github/: CICD_SETUP.md
.github/workflows/: build.yml  dev-build.yml
src-tauri/: Cargo.toml  tauri.conf.json  temp_build.rs
src-tauri/icons/: create_basic_icons.ps1  create_icon.ps1  generate_icons.py  icon.icns
src-tauri/src/: backup.rs  elevation.rs  hosts.rs  main.rs
